@startuml "Bowling Game Kata"
skinparam classAttributeIconSize 0

class Bowling {
  - STANDARD_MAX_FRAMES : int
  - scoreCalculator : ScoreCalculator
  - bonusRolls : int

  - frames : List<Frame>
  - totalScore : int
  - isComplete : bool

  + GetFrames() : List<Frame>
  + GetTotalScore() : int
  + GetIsComplete() : bool

  + Roll(pinsDown : int) : void
}

class Frame {
  - MAX_PINS_COUNT : int
  - MAX_ROLLS_COUNT : int

  - pinsCount : int

  - rolls : List<int>
  - status : FrameStatus

  + GetRolls() : List<int>
  + GetStatus() : FrameStatus

  + AddRoll(pinsDown : int) : void
}

class ScoreCalculator {
  - MAX_FRAME_INDEX_WITH_BONUS : int

  - currentMultiplier : int
  - nextMultiplier : int

  + CalculateCurrentRollScore(frame : Frame, frameIndex : int) : int

  - UpdateMultipliers(frame : Frame, frameIndex : int) : void
}

enum FrameStatus {
  Strike
  Spare
  Normal
  Incomplete

  IsComplete() : bool
}

Bowling o-- ScoreCalculator
Bowling o-- Frame
ScoreCalculator -> Frame

Frame o-- FrameStatus

@enduml